Fix the display wrap problem where it would wrap vertically instead of horizontally

--- a/style.css
+++ b/style.css
@@ -1,8 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-size: 20px;
+    font-size: 18px;
+    font-family: "Sour Gummy";
+    font-weight: 500;
+    color: #1F3456;
+}
+
+body {
+    display: flex;
+    justify-content: center;
+    margin-block: 10px;
 }
 
 .calculator { 
@@ -12,7 +23,7 @@
     width: 600px;
     height: 800px;
     background-color: #C1D0E3;
-    border: red 2px solid;
+    border: #87A4D4 2px solid;
     border-radius: 10px;
 }
 
@@ -26,7 +37,11 @@ button {
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    overflow-x: auto;
+    overflow-y: hidden;
+    white-space: nowrap;
     flex-wrap: wrap;
+    letter-spacing: 5px;
     background-color:#E3C1D0;
     border-radius: 10px;
     width: 80%;
@@ -48,7 +63,6 @@ button {
     flex-direction: column;
     padding: 20px;
     gap: 30px;
-    border: blue 3px solid;
 }
 
 .operators {
@@ -61,6 +75,17 @@ button {
     justify-content: space-around;
 }
 
+.numbers {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    gap: 70px;
+    padding: 30px;
+    border: #EDF2F7 1px solid;
+    border-radius: 5px;
+    background-color: #AEC1DB;
+}
+
 .pink-buttons
 {
     background-color: #E3C1D0;
@@ -68,4 +93,8 @@ button {
 
 .green-buttons {
     background-color: #D0E3C1;
+}
+
+.whitish-buttons {
+    background-color: #DFE6F2;
 }
